# kea

./: README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: ffmpeg.rs  lib.rs  main.rs  paths.rs
src-tauri/src/commands/: export.rs  mod.rs  obsidian.rs  project.rs  settings.rs  silence.rs  transcribe.rs  video.rs
src/components/: Home.tsx  Settings.tsx
src/components/editor/: Editor.tsx  Timeline.tsx  Toolbar.tsx  Transcript.tsx  VideoPlayer.tsx
src/lib/: api.ts  llm.ts  timeline.ts  types.ts  useFileDrop.ts
